# proyecto-programacion3

./: .gitignore  CMakeLists.txt  README.md  enunciado.md
src/: main.cpp
src/headers/: database.h  load.h  mastarde.h  movie.h  movie_factory.h  observer.h  search.h  trie.h  ui.h  user.h  utility.h
